# Computer-Vision-CCTV-Tracking

./: .env.example  .gitignore  AI-Powered-Intelligent-Security-Ecosystem.pptx  Computer_Vision_CCTV_Tracking_Project_Report.docx  README.md  analytics.py  app.py  config.yaml  detector.py  launch_cctv.bat  main.py  optimization.py  pyproject.toml  requirements.txt  run_all_tests.py  tracker.py  utils.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: benchmark.yaml  cameras.yaml  events.yaml  models.yaml  zones.yaml
reports/: baseline_vs_adaptive_report.md  customer_analytics_report.md  dataset_selection_report.md  dataset_validation_report.md  detailed_model_analytics_report.md  final_mba_project_report.md  model_comparison_report.md  security_event_report.md  tracking_comparison_report.md
results/: experiment_registry.csv  person_model_metrics.csv
scripts/: add_clickable_links.py  add_hf_link_to_docx.py  benchmark.py  clean_student_details.py  compile_final_reports.py  download_and_validate.py  download_real_fire_dataset.py  download_real_person_dataset.py  evaluate_and_report.py  find_gamma.py  humanize_docx.py  inspect_pptx.py  prepare_and_upload_hf.py  remove_gamma_watermark.py  run_adaptive.py  run_baseline.py  run_model_experiments.py  run_tracking_experiments.py  train_specialist.py  update_docx_all_metrics.py  update_docx_report.py  update_links.py  update_pptx.py  update_toc_exact_pages.py  update_toc_page_numbers.py
src/: __init__.py  config.py
src/analytics/: dwell_time.py  (+2 more)
tests/: test_config.py  test_pipeline.py  test_utils.py
(+20 files in other folders)
