[project]
name = "security_ecosystem"
version = "0.1.0"
description = "AI-Powered Intelligent Security Ecosystem for Experience Centers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.4.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.535.0",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
